# ddns-tool

./: .env.example  .gitignore  README.md  buildspec.yml  docker-compose.deploy.yml  docker-compose.yml
.github/workflows/: deploy-to-dev.yml
docker/app/: Dockerfile  Dockerfile.deploy  startup.sh
src/: app.py  auth.py  pyproject.toml  route53.py
terraform/: acm.tf  api_gateway.tf  ecr.tf  event_bridge.tf  iam.tf  lambda.tf  main.tf  route53.tf  terraform.tfvars.example  variables.tf
terraform/lambda_updater/: main.py
